--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,26 @@ body{
     font-family: 'arial', serif;
     background-image: url("../img/graph-tile.png");
     background-repeat: repeat;
+        padding: 0px;
+    margin: 0px;
+    width: 100%;
 }
 
-header{
-    text-align: center;
-    margin-bottom: 2em;
-    margin-top: 2em;
+header {
+    width: -webkit-fill-available;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    padding: 2em 2em;
+    position: absolute;
+}
+nav {
+    display: flex;
+    list-style: none;
+}
+nav li{
+    color: #fff
 }
 header h3{
         font-family: cursive;
@@ -21,13 +35,82 @@ header h2{
 }
 header h1 {
     font-family: arial;
-    color: #ca0a4b;
     font-size: 3rem;
 }
-span, a{
-    color:red;
+h2 a{
+    color: white;
+    font-size: 3rem;
 }
-
+section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+nav li a{
+        color: white;
+    text-decoration: none;
+    margin-right: 1em;
+}
+.text-center{
+    text-align: center;
+}
+.title{
+        font-size: 3rem;
+}
+.logos a {
+        color: white;
+    text-decoration: none;
+    font-size: 30px;
+}
+.principal {
+    position: relative;
+    justify-content: center;
+    min-height: 100vh;
+    color: #fff;
+    text-align: center;
+}
+.fondo{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-color: #2196F3;
+    z-index: -1;
+    background-image: url(../img/hero.jpg)
+}
+.fondo:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: gray;
+    opacity: 0.75;
+}
+.button{
+        padding: 2em;
+    color: #fff;
+    border-radius: 4px;
+    text-transform: uppercase;
+    background-color: #2196F3;
+    font-weight: 800;
+    text-align: center;
+    text-decoration: none;
+}
+.work h3{
+    color: gray;
+    text-transform: uppercase;
+    margin-bottom: 2em;
+    text-align: center;
+}
+.work p {
+    width: 80%;
+    text-align: center;
+    margin-bottom: 2em;
+    padding: 0 20px;
+    line-height: 2;
+}
 /*
     rojo: #ba1820;
     font-family: Times New Roman;
